# proyecto-coche-autonomo

ackermann_lidar/src/: find_obstacle.h
auto-autonomo-chido/src/: stay_on_road_test.cpp
auto-autonomo_/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
auto-autonomo_/src/: find_road.1.h  find_road.2.h  find_road.cpp  find_road.cpp~  find_road.h  image_test.cpp  move_car.cpp  stay_on_road.cpp
control_coche/: CMakeLists.txt  package.xml
control_coche/src/: car_controller.cpp  car_teleop.cpp
example_opencv/: CMakeLists.txt  package.xml
example_opencv/src/: segmentador.cpp  show_thisimage.cpp  show_webcam.cpp
follow_bot/: CMakeLists.txt  package.xml  package.xml.save
follow_bot/launch/: follow_bot.launch
follow_bot/models/track/: model.config  model.sdf
follow_bot/models/track/materials/scripts/: track.material
follow_bot/src/: Follower.cpp  Follower.h  main.cpp
follow_bot/worlds/: follow_bot_orig2.word
image-transport/src/: image_transport_tutorial
image-transport/src/imgae_transport_tu/src/: my_publisher.cpp
image_converter/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt.save  package.xml
image_converter/launch/: image_converter.launch
image_converter/src/: ImageConverter.h
python_messages/: CMakeLists.txt  package.xml
python_messages/src/: ejercicio1.py  ejercicio2_publisher.py  ejercicio2_subs.py  message_publisher.py  message_subscriber.py
python_services/: CMakeLists.txt  package.xml
python_services/src/: service_client.py  service_server.py
python_topics/: CMakeLists.txt  package.xml
python_topics/src/: topic_publisher.py  topic_subscriber.py
